--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	// oauth2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 	// database
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
