--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,7 +13,24 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             # 응답받은 사용자 정보 중 사용자 이름이 무엇인지 담겨있는 JSON key
             user-name-attribute: response
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+
         registration:
+          kakao:
+            client-id: 	9acee24a1a363cfce5f47a366f795830
+            client-secret: 7RCw7bmeYu5cXaPn5UXffzmDlNi8GtZ4
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            authorization-grant-type: authorization_code
+            client-authentication-method: client_secret_post
+            client-name: Kakao
+            scope:
+              - profile_nickname
+              - profile_image
+              - account_email
           naver:
             client-id: bJLzxxfKKhP4S4aMAhsS
             client-secret: VaIZSXR_M5
